smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/shape-id-does-not-conflict-with-tagged-literals.smithy
$version: "2.1"

namespace smithy.example

string re

structure usesRe {
    re: smithy.example#re
}
